--- a/thunderchild/static/thunderchild/css_src/thunderchild.less
+++ b/thunderchild/static/thunderchild/css_src/thunderchild.less
@@ -135,6 +135,10 @@ a {
 .nav-tabs > .active > a, .nav-tabs > .active > a:hover {
   background:@pageBackgroundColor;
 }
+.nav-tabs > li > a {
+  padding-top:7px;
+  padding-bottom:7px;
+}
 .navbar {
   .navbar-inner {
     min-height:35px;
